feat: 初期マイグレーションファイル追加

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,17 @@ DISCORD_TOKEN=YOUR_BOT_TOKEN_HERE
 
 # Discord Application Client ID
 CLIENT_ID=YOUR_CLIENT_ID_HERE
+# Alias for clarity (some setups prefer DISCORD_* naming)
+DISCORD_CLIENT_ID=YOUR_CLIENT_ID_HERE
 
 # Discord Server (Guild) ID for development
 GUILD_ID=YOUR_GUILD_ID_HERE
+# Alias for clarity (some setups prefer DISCORD_* naming)
+DISCORD_GUILD_ID=YOUR_GUILD_ID_HERE
+
+# Slash command deployment scope: "guild" | "global"
+# Default is "guild" when not set.
+COMMANDS_SCOPE=guild
 
 # Notion API Integration
 NOTION_API_KEY=YOUR_NOTION_API_KEY_HERE
