--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "node dist/index.js",
     "dev": "ts-node --transpile-only src/index.ts",
     "deploy": "ts-node src/deploy-commands.ts",
+    "validate:template": "ts-node src/scripts/validate-template.ts",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
     "typecheck": "tsc --noEmit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
