--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "dependencies": {
     "@discordjs/rest": "^2.6.0",
     "@google/generative-ai": "^0.24.1",
-    "@prisma/client": "^6.14.0",
+    "@prisma/client": "^6.15.0",
     "axios": "^1.11.0",
     "date-fns-tz": "^3.2.0",
     "discord.js": "^14.22.1",
@@ -40,19 +40,19 @@
     "kuromoji": "^0.1.2",
     "node-cron": "^4.2.1",
     "p-queue": "^6.6.2",
+    "pino": "^9.2.0",
     "sharp": "^0.34.3",
     "uuid": "^11.1.0",
-    "zod": "^4.1.3",
-    "pino": "^9.2.0"
+    "zod": "^4.1.3"
   },
   "devDependencies": {
     "@types/kuromoji": "^0.1.3",
     "@types/node": "^24.3.0",
     "@types/node-cron": "^3.0.11",
     "@types/uuid": "^10.0.0",
-    "prisma": "^6.14.0",
+    "pino-pretty": "^11.2.1",
+    "prisma": "^6.15.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
-    "pino-pretty": "^11.2.1"
+    "typescript": "^5.9.2"
   }
 }
